force-app/main/default/objects/ssot__HealthcareTaxonomy__dlm/fields/ssot__TaxonomyCode__c.field-meta.xml
<CustomField>
    <fullName>ssot__TaxonomyCode__c</fullName>
    <label>Taxonomy Code</label>
    <length>255</length>
    <mktDataModelFieldAttributes>
        <definitionCreationType>Standard</definitionCreationType>
        <isDynamicLookup>false</isDynamicLookup>
        <refAttrDeveloperName>TaxonomyCode</refAttrDeveloperName>
        <usageTag>None</usageTag>
    </mktDataModelFieldAttributes>
    <required>true</required>
    <type>Text</type>
</CustomField>