force-app/main/default/objects/ssot__HealthcareTaxonomy__dlm/fields/ssot__TaxonomyType__c.field-meta.xml
<CustomField>
    <fullName>ssot__TaxonomyType__c</fullName>
    <label>Taxonomy Type</label>
    <length>15</length>
    <mktDataModelFieldAttributes>
        <definitionCreationType>Standard</definitionCreationType>
        <isDynamicLookup>false</isDynamicLookup>
        <refAttrDeveloperName>TaxonomyType</refAttrDeveloperName>
        <usageTag>None</usageTag>
    </mktDataModelFieldAttributes>
    <required>true</required>
    <type>Text</type>
</CustomField>